apps/syncthing/base/sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: syncthing
spec:
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
    whenScaled: Retain
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: syncthing
      app.kubernetes.io/name: syncthing
  serviceName: syncthing
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: syncthing
        app.kubernetes.io/name: syncthing
    spec:
      containers:
        - name: syncthing
          image: syncthing
          livenessProbe:
            httpGet:
              path: /rest/noauth/health
              port: http
            initialDelaySeconds: 60
            timeoutSeconds: 5
          ports:
            - name: http
              containerPort: 8384
            - name: sync
              containerPort: 22000
              protocol: TCP
            - name: sync-udp
              containerPort: 22000
              protocol: UDP
            - name: discovery
              containerPort: 21027
              protocol: UDP
          readinessProbe:
            httpGet:
              path: /rest/noauth/health
              port: http
            initialDelaySeconds: 30
            timeoutSeconds: 5
          startupProbe:
            failureThreshold: 180
            httpGet:
              path: /rest/noauth/health
              port: http
            initialDelaySeconds: 5
            timeoutSeconds: 5
          volumeMounts:
            - name: config
              mountPath: /config
          resources:
            requests:
              cpu: 49m
              memory: 1252Mi
          securityContext:
            capabilities:
              add:
                - CHOWN
                - FOWNER
                - SETGID
                - SETUID
      securityContext:
        fsGroup: 1000
        supplementalGroups:
          - 10000
  volumeClaimTemplates:
    - metadata:
        name: config
      spec:
        resources:
          requests:
            storage: 4Gi
        storageClassName: longhorn-standard
        volumeMode: Filesystem
        accessModes:
          - ReadWriteOncePod
